# YouTube-Sentiment-MLOps

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  docker-compose.yml  dvc.yaml  launch_extension_backend.bat  main.py  params.yaml  pyproject.toml  refactor.ps1  validate_system.bat
.github/workflows/: ci_cd.yaml
app/: __init__.py  inference_utils.py  insights_api.py  main.py  predict_model.py  predict_model_absa.py  test_inference.py
chrome-extension/: popup.css  popup.html  popup.js
chrome-extension-absa/: manifest.json  popup.css  popup.html  popup.js
config/: config.yaml  params.yaml  schema.yaml
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
github/workflows/: ci.yml
models/advanced/: .gitignore  lightgbm_best_hyperparams.pkl  xgboost_best_hyperparams.pkl
models/baseline/: .gitignore
references/: folder_structure.txt  project_overview.md  system_architecture_data_flow_you_tube_sentiment_mlops.md
reports/: .gitignore  pyright_errors.txt  pyright_errors2.txt  pyright_verification.txt
reports/docs/: chrome-extension.md  ci_cd_pipeline.md  docker.md  docker_setup.md  dvc_mlflow_integration.md  feature_engineering.md  modeling.md
reports/figures/: .gitignore
src/agents/: __init__.py  content_analyst.py
src/api/: agent_api.py  inference_utils.py  insights_api.py  main.py
tests/: conftest.py  test_agent_api.py  test_agent_tools.py  test_api_main.py  test_components_baseline.py  test_components_bert.py  test_components_feature_engineering.py  test_config.py  test_data_ingestion.py  test_data_preparation.py  test_data_validation.py  test_inference.py  test_model_evaluation.py  test_model_pipeline.py  test_pipeline_stages.py  test_utils_data.py  test_utils_misc.py
(+596 files in other folders)
